--- a/skytech/build.gradle
+++ b/skytech/build.gradle
@@ -5,12 +5,13 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    namespace 'com.skytech'
+    compileSdk 33
 
     defaultConfig {
-        buildToolsVersion "30.0.0"
+        buildToolsVersion "34.0.0"
         minSdk 23
-        targetSdk 30
+        targetSdk 33
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -36,14 +37,14 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "androidx.security:security-crypto:1.1.0-alpha03"
+    implementation "androidx.security:security-crypto:1.1.0-alpha06"
 
     //Network
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -53,7 +54,7 @@ dependencies {
 
 
     implementation 'com.karumi:dexter:6.2.2'
-    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha06'
 
     //log
     implementation 'com.jakewharton.timber:timber:5.0.1'
