--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,20 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
 }
 
-android {
-    namespace 'com.skytecksdk'
-    compileSdk 33
-
-    defaultConfig {
-        applicationId "com.skytecksdk"
-        minSdk 23
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = "17"
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
 
-dependencies {
-
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation project(path: ':skytech')
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+ext {
+    retrofit_version = "2.9.0"
+    logging_interceptor_version = "4.11.0"
+    moshi_version = "2.9.0"
+    lifecycle_version = "2.6.1"
+    coroutines_core = "1.5.2"
+    coroutines_android = "1.7.1"
 }
